# standard-agent

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  config.json  config.toml  good_first_issue.md  loc.py  main.py  main_build_your_own_agent.py  pyproject.toml  requirements.toml  requirements.txt
.codacy/: codacy.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: publish-to-pypi.yaml
_transient-files/: 2025-09-09-standard-agent.txt
agents/: base_agent.py  models.py  prebuilt.py  prebuilt_agents.py  prebuilt_bedrock.py  standard_agent.py
agents/goal_preprocessor/: __init__.py  base.py  conversational.py  (+1 more)
design/: agent_evaluation_prd.md  opentelemetry_langfuse_eval.md
docs/: benchmarking.md  system_overview.md  tool_integration_examples.md
evaluation/: README.md  __init__.py  dashboard.py  dataset.py  hooks.py  instrumentation.py  metrics.py  otel_setup.py  runner.py  storage.py  tracing.py
examples/: benchmark.py  benchmarking.md  calculator_agent.py  cli_api_agent.py  cli_react_api_agent.py  cli_react_api_agent_bedrock.py  cli_rewoo_api_agent_bedrock.py
inbox/: base_inbox.py  cli_inbox.py
jentic_toolkit/: jentic_client.py  jentic_tool_iface.py
llm/: base_llm.py  lite_llm.py
memory/: scratch_pad.py
models/: tool_input_schema.py
outbox/: __init__.py  base_outbox.py  cli_outbox.py  logging_outbox.py
reasoners/: base_reasoner.py  models.py  pre_built_reasoners.py  prompts.py
scripts/: benchmark.py  validate_config.py
tests/: __init__.py  conftest.py  test_agent_cli.py  test_jentic_client.py  test_reasoner.py
tools/: exceptions.py  interface.py
utils/: cli.py  config.py  json_parser.py  load_config.py  logger.py  observe.py
workflow_miner/: arazzo.yaml  arazzo_composer.py  langfuse_trace_puller.py  trace_collector.py
(+170 files in other folders)
