[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "standard_agent"
version = "0.1.0"
description = "A clean, reusable Python library that lets developers spin up AI agents whose reasoning loops automatically *search → load → execute Jentic workflows and API operations."
authors = [
    {name = "Jentic", email = "hello@jentic.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jentic>=0.8.3",
    "openai>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "litellm",
    "google-generativeai",
    "pytest>=8.0",
    "pytest-mock",
    "ruff",
    "mypy",
    "dacite"
]

[tool.setuptools.packages.find]
include = ["jentic_agents*"]
exclude = ["logs*", "docs*"]